feat: 完成基础通知闭环
